--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
   <script>
     const terminal = document.getElementById('terminal');
     const input = document.getElementById('commandInput');
-    const API_BASE = 'https://your-railway-app.up.railway.app/api/command'; // TODO replace with railway app
+    const API_BASE = 'https://viper-hacker-demo-production.up.railway.app'; // replace with railway app
 
     const print = (text) => {
       terminal.innerHTML += `\n${text}`;
