--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script>
     const terminal = document.getElementById('terminal');
     const input = document.getElementById('commandInput');
-    const API_BASE = 'https://viper-hacker-demo-production.up.railway.app/api/command'; // replace with railway app
+    const API_BASE = 'https://viper-hacker-demo-production.up.railway.app/api/command';
 
     const print = (text) => {
       terminal.innerHTML += `\n${text}`;
@@ -80,7 +80,7 @@
       }
     });
 
-    print('Welcome to the Viper Hacker Terminal! Type "help" to begin.');
+    print('Welcome to the Hacker Terminal! Type "help" to begin.');
   </script>
 </body>
 </html>
