--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       }
     });
 
-    print('Welcome to the Hacker Terminal! Type "help" to begin.');
+    print('Welcome to Viepertech Mock Hacker Terminal! Type "help" to begin.');
   </script>
 </body>
 </html>
